--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
         <!-- button -->
         <a
           href="#"
-          class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight"
+          class="hidden md:block p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight"
           >Get Started</a
         >
       </div>
